First wasm library call

--- a/index.html
+++ b/index.html
@@ -25,8 +25,12 @@
       <button id="Reset" onclick="reset()"> Reset board </button>
     </p>
 
+    
     <canvas id="myCanvas" width="512" height="512"></canvas>
-    <script src="web/chess.js"></script>
+    <script src="build/Chess.js"></script>
+    <script src="web/engine.js"></script>
+    <script src="web/board.js"></script>
+    
 
 </body>
 </html>
